--- a/package.json
+++ b/package.json
@@ -9,18 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@custom-react-hooks/use-element-size": "^1.4.19",
+    "@react-three/drei": "^9.105.6",
+    "@react-three/postprocessing": "^2.16.2",
+    "@reactuses/core": "^5.0.14",
+    "framer-motion": "^11.2.4",
+    "glslify-loader": "^2.0.0",
+    "gsap": "^3.12.5",
+    "leva": "^0.9.35",
+    "lodash": "^4.17.21",
+    "maath": "^0.10.7",
+    "next": "14.2.3",
+    "postprocessing": "^6.35.4",
+    "raw-loader": "^4.0.2",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "react-three-fiber": "^6.0.13",
+    "sass": "^1.77.1",
+    "three": "^0.164.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "typescript": "^5"
   }
 }
